tests/rosetta/transpiler/Zig/call-a-function-4.error
zig build: exit status 1
/tmp/call-a-function-4.zig:8:34: error: unused function parameter
/tmp/call-a-function-4.zig:8:24: error: unused function parameter
/tmp/call-a-function-4.zig:8:14: error: unused function parameter
